--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,8 @@
 
 
 // Componentes
-@import 'components/nav.scss';
-
+@import './components/contacto.scss';
+@import './components/footer.scss';
+@import './components/marcas.scss';
 // Variables
 @import  'var/colores.scss';
