--- a/scss/components/contacto.scss
+++ b/scss/components/contacto.scss
@@ -6,17 +6,23 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
     width: 100%;
-    .contacto__iconos {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    color: $blanco;
     .contacto__iconos img {
         background-color: $verde;
         border-radius: 50%;
         width: 44px;
         padding: .5rem;
+    }
+    .contacto__iconos--active p {
+        padding: .5rem;
+    }
+    .contacto__iconos--active {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 }
 .form {
@@ -68,7 +74,7 @@ body {
             cursor: pointer;
         }
         @media ( max-width: 640px) { 
-            input {
+            input,textarea {
                 width: 300px;
             }
         }
