--- a/scss/var/colores.scss
+++ b/scss/var/colores.scss
@@ -1,5 +1,6 @@
 $verde: #01FFBB;
 $fuenteTexto: 'Montserrat', sans-serif;
+$fuenteTitulo: 'Bebas Neue', cursive;
 $negro: #000000;
 $blanco: #E5E5E5;
 $gris: #D0D0D0;
