--- a/scss/components/contacto.scss
+++ b/scss/components/contacto.scss
@@ -2,13 +2,25 @@
 body {
     background-color: $negro;
 }
-.contacto {
+.contacto__header{
+    font-family: $fuenteTitulo;
+    
+    h3{
+        color: $blanco;
+        font-size: 3rem;
+    }
+    p {
+        color: $blanco;
+        font-size: 2.5rem;
+    }    
+}
+.contacto { // contenedor principal
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
     width: 100%;
     color: $blanco;
+    // iconos y texto
     .contacto__iconos img {
         background-color: $verde;
         border-radius: 50%;
@@ -16,6 +28,8 @@ body {
         padding: .5rem;
     }
     .contacto__iconos--active p {
+        font-family: $fuenteTitulo;
+        font-size: 1.2rem;
         padding: .5rem;
     }
     .contacto__iconos--active {
@@ -23,16 +37,18 @@ body {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        gap: 1.5rem;
     }
 }
+// form styles
 .form {
     .form__field {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 1.4rem;
         width: 100%;
+        gap: 1.5rem;
         input {
             font-family: 'Bebas Neue', cursive;
             line-height: 31px;
@@ -73,7 +89,7 @@ body {
             border: 4px solid $verde;
             cursor: pointer;
         }
-        @media ( max-width: 640px) { 
+        @media ( max-width: 480px) { 
             input,textarea {
                 width: 300px;
             }
