--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
 
 .footer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #000000;
@@ -117,25 +117,27 @@ body {
 .footer .footer-img img {
   width: 70px;
 }
-
-html {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
+@media (min-width: 640px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
 
 .marcas {
   color: #E5E5E5;
+  font-size: 2rem;
+  font-family: "Bebas Neue", cursive;
 }
 .marcas .marcas-icons {
   width: 100%;
   background-color: #585454;
+  margin: 0;
+  padding: 0;
 }
 .marcas .marcas-icons img {
-  width: 100px;
+  width: 200px;
 }
 
 /*# sourceMappingURL=style.css.map */
