--- a/scss/components/contacto.scss
+++ b/scss/components/contacto.scss
@@ -89,6 +89,9 @@ body {
             border: 4px solid $verde;
             cursor: pointer;
         }
+        .boton:hover {
+            
+        }
         @media ( max-width: 480px) { 
             input,textarea {
                 width: 300px;
