--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -1,7 +1,7 @@
 @import '../var/colores.scss';
 .footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: $negro;
@@ -18,10 +18,10 @@
             width: 70px;
         }
     }
-    // @media (min-width: 640px) { 
-    //     flex-direction: row;
-    //     justify-content: space-around;
-    //     align-items: center;
-    // }
+    @media (min-width: 640px) { 
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
 
