--- a/scss/var/colores.scss
+++ b/scss/var/colores.scss
@@ -3,4 +3,4 @@ $fuenteTexto: 'Montserrat', sans-serif;
 $fuenteTitulo: 'Bebas Neue', cursive;
 $negro: #000000;
 $blanco: #E5E5E5;
-$gris: #D0D0D0;
+$gris: #131919;
