--- a/css/style.css
+++ b/css/style.css
@@ -111,11 +111,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000000;
+  background-color: #131919;
   color: #E5E5E5;
   font-family: "Montserrat", sans-serif;
   width: 100%;
-  padding: 1rem;
+  margin-top: 4rem;
+}
+.footer .footer-icons a {
+  text-decoration: none;
 }
 .footer p {
   font-size: 1rem;
@@ -139,7 +142,6 @@ body {
 }
 .marcas .marcas-icons {
   width: 100%;
-  background-color: #585454;
   margin: 0;
   padding: 0;
 }
