--- a/scss/components/imagen-main.scss
+++ b/scss/components/imagen-main.scss
@@ -1,7 +1,11 @@
-#imagen-main{
+#imagen-main {
     text-align: center;
-    img{
-            width: 32.7rem;
-            height: 24.6rem;
+
+    img {
+        width: 40%;
+
     }
 }
+
+//Responsive
+@media(max-width:768px) {}
