--- a/css/style.css
+++ b/css/style.css
@@ -6,33 +6,38 @@
 /*@import 'components/nav.scss';*/
 #filosofia {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 #filosofia .descripcion {
   width: 24rem;
 }
 #filosofia .descripcion p {
-  width: 24rem;
-  height: 15rem;
+  width: 100%;
+  height: 100%;
 }
 
 #filosofia div img {
-  width: 22rem;
-  height: 20rem;
+  width: 80%;
 }
 
+@media (max-width: 375px) {
+  #filosofia {
+    padding: 0;
+    margin: 0;
+  }
+}
 #servicios #titulo-servicios h3 {
   color: #E5E5E5;
 }
 
 .descripcion {
   margin: 3.4rem;
-  width: 28rem;
+  width: auto;
 }
 
 #subtitulos {
-  margin-left: 0;
+  margin: 0;
 }
 #subtitulos .subtitulo {
   font-family: "Montserrat", "sans-serif";
@@ -50,17 +55,64 @@
 
 .grid-iconos {
   display: grid;
-  grid-template-columns: 4rem 4rem 4rem;
-  grid-template-rows: 4rem 4rem;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-rows: 30% 30%;
   gap: 2rem;
 }
 
+.grid-iconos img {
+  transition: 0.6s linear;
+  width: 4rem;
+}
+
+.grid-iconos img:hover {
+  transform: rotateZ(360deg) scale(1.3);
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  #servicios {
+    padding: 0;
+    margin: 0;
+  }
+  #servicios p {
+    margin: 10%;
+  }
+  #servicios .servicios {
+    display: block;
+  }
+  #servicios .servicios #subtitulos {
+    display: inline-block;
+    flex-wrap: wrap;
+    margin: 0;
+    gap: 10%;
+  }
+}
+.grid-iconos {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .grid-iconos {
+    margin: 0;
+  }
+}
+@media (min-width: 500px) {
+  .grid-iconos {
+    display: grid;
+    margin: 10% 15%;
+  }
+}
 #tarjetas {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  text-align: center;
 }
 
+#tarjetas .tarjeta {
+  box-shadow: 0 0 2rem #262626;
+}
 #tarjetas .tarjeta h4 {
   color: #01FFBB;
   margin: 0.75rem;
@@ -74,6 +126,7 @@
   font-size: 0.85rem;
   font-weight: 600;
   line-height: 1.06rem;
+  text-shadow: none;
 }
 
 .tarjeta {
@@ -82,6 +135,7 @@
   border-radius: 1rem;
   border-bottom: #01FFBB 1.2rem solid;
   background-color: #262626;
+  transition: 0.5s;
 }
 
 .icono-tarjeta {
@@ -92,19 +146,98 @@
   size: 4rem;
 }
 
+#tarjetas .tarjeta:hover {
+  background-color: #01FFBB;
+  border-bottom: #262626 1.2rem solid;
+  transform: scale(1.3);
+  cursor: pointer;
+}
+#tarjetas .tarjeta:hover .titulo_tarjeta {
+  color: #000000;
+}
+#tarjetas .tarjeta:hover p {
+  color: #000000;
+}
+
+#confianza > p,
+#confianza h2 {
+  text-align: center;
+}
+
+#confianza-1,
+#confianza-2 {
+  display: grid;
+  grid-template-columns: 18rem 18rem 18rem;
+  gap: 1rem 8rem;
+}
+
+#confianza-2 {
+  grid-template-rows: 15rem 15rem;
+}
+
+.tarjeta-t {
+  width: 18rem;
+  height: 15rem;
+  margin: 0;
+  text-align: center;
+}
+.tarjeta-t h2 {
+  margin: 0;
+  padding: 0;
+}
+
+.tarjeta-t p {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.tarjeta-t img {
+  width: 2rem;
+}
+
+.gente {
+  position: relative;
+  left: 38%;
+}
+
+@media (max-width: 500px) {
+  #confianza {
+    justify-items: center;
+  }
+  #confianza #confianza-1,
+#confianza #confianza-2 {
+    display: block;
+    margin-left: 0;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: black;
 }
-body div, body section {
-  margin: 3.4rem;
+body main {
+  align-items: center;
 }
-
-hr {
-  border-color: #00FFBB80;
+body main div,
+body main section {
+  margin: 3rem;
 }
 
 /*Colores generales*/
-p, h2 {
+h2,
+.subtitulo {
+  text-shadow: 0 0 2rem #00FFBB80;
+}
+
+p {
+  text-shadow: 0 0 0.25rem #262626;
+}
+
+p,
+h2 {
   color: white;
   font-family: "Montserrat", "sans-serif";
 }
@@ -118,18 +251,31 @@ h2 {
 }
 
 h3 {
+  color: #01FFBB;
   font-family: "Bebas Neue", "cursive";
   font-size: 18px;
   font-weight: 400;
   margin-bottom: 0;
 }
 
+@media (max-width: 768px) {
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 12px;
+  }
+
+  p {
+    font-size: 10px;
+  }
+}
 #imagen-main {
   text-align: center;
 }
 #imagen-main img {
-  width: 32.7rem;
-  height: 24.6rem;
+  width: 40%;
 }
 
 /*# sourceMappingURL=style.css.map */
