--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@
     margin: 0;
   }
 }
+@media (max-width: 768px) {
+  #filosofia {
+    padding: 0;
+    margin: 0;
+  }
+}
 #servicios #titulo-servicios h3 {
   color: #E5E5E5;
 }
@@ -162,17 +168,18 @@
 #confianza > p,
 #confianza h2 {
   text-align: center;
+  align-self: center;
 }
 
 #confianza-1,
 #confianza-2 {
   display: grid;
-  grid-template-columns: 18rem 18rem 18rem;
-  gap: 1rem 8rem;
+  grid-template-columns: 22% 22% 22%;
+  gap: 17%;
 }
 
 #confianza-2 {
-  grid-template-rows: 15rem 15rem;
+  grid-template-rows: 10% 10%;
 }
 
 .tarjeta-t {
@@ -203,7 +210,15 @@
   #confianza #confianza-1,
 #confianza #confianza-2 {
     display: block;
-    margin-left: 0;
+  }
+}
+@media (max-width: 1024px) {
+  #confianza {
+    align-items: center;
+  }
+  #confianza #confianza-1,
+#confianza #confianza-2 {
+    display: block;
   }
 }
 * {
@@ -263,7 +278,7 @@ h3 {
   }
 
   p {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 #imagen-main {
