--- a/scss/components/tarjetas.scss
+++ b/scss/components/tarjetas.scss
@@ -62,6 +62,10 @@
         transform: scale(1.3);
         cursor: pointer;
 
+        .icono-tarjeta {
+            background-color: $negro;
+        }
+
         .titulo_tarjeta {
             color: $negro;
         }
